--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/localize": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "bootstrap": "^4.5.0",
+    "@angular/animations": "~13.3.11",
+    "@angular/common": "~13.3.11",
+    "@angular/compiler": "~13.3.11",
+    "@angular/core": "~13.3.11",
+    "@angular/forms": "~13.3.11",
+    "@angular/localize": "~13.3.11",
+    "@angular/platform-browser": "~13.3.11",
+    "@angular/platform-browser-dynamic": "~13.3.11",
+    "@angular/router": "~13.3.11",
+    "@ng-bootstrap/ng-bootstrap": "12.1.2",
+    "bootstrap": "5.0.1",
     "bootstrap-icons": "^1.8.3",
     "date-fns": "^2.28.0",
     "ngx-mask": "12.0.0",
@@ -36,13 +36,13 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1400.1",
-    "@angular-devkit/build-angular": "~12.2.13",
+    "@angular-devkit/build-angular": "~13.3.8",
     "@angular-eslint/builder": "^13.4.0",
     "@angular-eslint/eslint-plugin": "^13.4.0",
     "@angular-eslint/eslint-plugin-template": "^13.4.0",
     "@angular-eslint/template-parser": "^13.4.0",
-    "@angular/cli": "~12.2.17",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular/cli": "~13.3.8",
+    "@angular/compiler-cli": "~13.3.11",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
@@ -59,6 +59,6 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "2.6.2",
     "start-server-and-test": "^1.14.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   }
 }
